# pcl-exam-project

./: CMakeLists.txt  ProjectHome.md  component.cpp  component.h  componentMatch.cpp  componentMatch.h  componentSelection.cpp  componentSelection.h  componentcheck.cpp  componentcheck.h  main.cpp  notes.txt  pcqc.cpp  pcqc.h  registration.cpp  registration.h  segmentDifferences.cpp  segmentDifferences.h  ui.cpp  ui.h  ui_mainwindow.h
